custom service and token